// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Header component Theme color switcher skips rendering in case no theme value was provided from plugin 1`] = `
<div>
  <nav
    aria-label="Primary"
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="startWrapper"
      >
        <a
          aria-label="Homepage"
          href="/"
        >
          <div
            class="logo"
          >
            <div>
              <img
                alt="light-logo"
                class="light-mode-only"
                data-nimg="1"
                decoding="async"
                height="33"
                loading="lazy"
                src="static/images/logo-light.svg"
                style="color: transparent;"
                width="111"
              />
            </div>
            <div>
              <img
                alt="dark-logo"
                class="dark-mode-only"
                data-nimg="1"
                decoding="async"
                height="33"
                loading="lazy"
                src="static/images/logo.svg"
                style="color: transparent;"
                width="111"
              />
            </div>
          </div>
        </a>
      </div>
      <ul
        class="tabs"
      >
        <li>
          <a
            href="/en/docs"
          >
            components.header.links.docs
          </a>
        </li>
        <li>
          <a
            href="/en/learn"
          >
            components.header.links.learn
          </a>
        </li>
        <li>
          <a
            href="/en/download"
          >
            components.header.links.download
          </a>
        </li>
      </ul>
      <div
        class="endWrapper"
      >
        <ul
          class="rightContainer"
        >
          <li
            class="searchBar"
          >
            <span
              class="sr-only"
            >
              Search Bar
            </span>
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
            <span>
              Search
            </span>
          </li>
          <li>
            <button
              aria-label="components.header.buttons.toggleDarkMode"
              aria-pressed="true"
              class="darkModeToggle"
              type="button"
            >
              <svg
                class="light-mode-only"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M14 2c1.82 0 3.53.5 5 1.35-2.99 1.73-5 4.95-5 8.65s2.01 6.92 5 8.65A9.973 9.973 0 0114 22C8.48 22 4 17.52 4 12S8.48 2 14 2z"
                />
              </svg>
              <svg
                class="dark-mode-only"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58a.996.996 0 00-1.41 0 .996.996 0 000 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37a.996.996 0 00-1.41 0 .996.996 0 000 1.41l1.06 1.06c.39.39 1.03.39 1.41 0a.996.996 0 000-1.41l-1.06-1.06zm1.06-10.96a.996.996 0 000-1.41.996.996 0 00-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36a.996.996 0 000-1.41.996.996 0 00-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Tests for Header component renders correctly 1`] = `
<div>
  <nav
    aria-label="Primary"
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="startWrapper"
      >
        <a
          aria-label="Homepage"
          href="/"
        >
          <div
            class="logo"
          >
            <div>
              <img
                alt="light-logo"
                class="light-mode-only"
                data-nimg="1"
                decoding="async"
                height="33"
                loading="lazy"
                src="static/images/logo-light.svg"
                style="color: transparent;"
                width="111"
              />
            </div>
            <div>
              <img
                alt="dark-logo"
                class="dark-mode-only"
                data-nimg="1"
                decoding="async"
                height="33"
                loading="lazy"
                src="static/images/logo.svg"
                style="color: transparent;"
                width="111"
              />
            </div>
          </div>
        </a>
      </div>
      <ul
        class="tabs"
      >
        <li>
          <a
            href="/en/docs"
          >
            components.header.links.docs
          </a>
        </li>
        <li>
          <a
            href="/en/learn"
          >
            components.header.links.learn
          </a>
        </li>
        <li>
          <a
            href="/en/download"
          >
            components.header.links.download
          </a>
        </li>
      </ul>
      <div
        class="endWrapper"
      >
        <ul
          class="rightContainer"
        >
          <li
            class="searchBar"
          >
            <span
              class="sr-only"
            >
              Search Bar
            </span>
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
            <span>
              Search
            </span>
          </li>
          <li>
            <button
              aria-label="components.header.buttons.toggleDarkMode"
              aria-pressed="false"
              class="darkModeToggle"
              type="button"
            >
              <svg
                class="light-mode-only"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M14 2c1.82 0 3.53.5 5 1.35-2.99 1.73-5 4.95-5 8.65s2.01 6.92 5 8.65A9.973 9.973 0 0114 22C8.48 22 4 17.52 4 12S8.48 2 14 2z"
                />
              </svg>
              <svg
                class="dark-mode-only"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58a.996.996 0 00-1.41 0 .996.996 0 000 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37a.996.996 0 00-1.41 0 .996.996 0 000 1.41l1.06 1.06c.39.39 1.03.39 1.41 0a.996.996 0 000-1.41l-1.06-1.06zm1.06-10.96a.996.996 0 000-1.41.996.996 0 00-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36a.996.996 0 000-1.41.996.996 0 00-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Tests for Header component renders shorter menu items for mobile 1`] = `
<div>
  <nav
    aria-label="Primary"
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="startWrapper"
      >
        <a
          aria-label="Homepage"
          href="/"
        >
          <div
            class="logo"
          >
            <div>
              <img
                alt="light-logo"
                class="light-mode-only"
                data-nimg="1"
                decoding="async"
                height="33"
                loading="lazy"
                src="static/images/logo-light.svg"
                style="color: transparent;"
                width="111"
              />
            </div>
            <div>
              <img
                alt="dark-logo"
                class="dark-mode-only"
                data-nimg="1"
                decoding="async"
                height="33"
                loading="lazy"
                src="static/images/logo.svg"
                style="color: transparent;"
                width="111"
              />
            </div>
          </div>
        </a>
      </div>
      <ul
        class="tabs"
      >
        <li>
          <a
            href="/en/docs"
          >
            components.header.links.docs
          </a>
        </li>
        <li>
          <a
            href="/en/learn"
          >
            components.header.links.learn
          </a>
        </li>
        <li>
          <a
            href="/en/download"
          >
            components.header.links.download
          </a>
        </li>
      </ul>
      <div
        class="endWrapper"
      >
        <ul
          class="rightContainer"
        >
          <li
            class="searchBar"
          >
            <span
              class="sr-only"
            >
              Search Bar
            </span>
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
            <span>
              Search
            </span>
          </li>
          <li>
            <button
              aria-label="components.header.buttons.toggleDarkMode"
              aria-pressed="true"
              class="darkModeToggle"
              type="button"
            >
              <svg
                class="light-mode-only"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M14 2c1.82 0 3.53.5 5 1.35-2.99 1.73-5 4.95-5 8.65s2.01 6.92 5 8.65A9.973 9.973 0 0114 22C8.48 22 4 17.52 4 12S8.48 2 14 2z"
                />
              </svg>
              <svg
                class="dark-mode-only"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58a.996.996 0 00-1.41 0 .996.996 0 000 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37a.996.996 0 00-1.41 0 .996.996 0 000 1.41l1.06 1.06c.39.39 1.03.39 1.41 0a.996.996 0 000-1.41l-1.06-1.06zm1.06-10.96a.996.996 0 000-1.41.996.996 0 00-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36a.996.996 0 000-1.41.996.996 0 00-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;
